# pegInHole

./: CMakeLists.txt  README.md  big_head_insertion.cpp  big_head_insertion_yolo.cpp  common_i.cpp  dynModel_i.cpp  dynModel_i.h  global_registration.py  global_registration_2.py  hand_guidance.cpp  ply_multiway_registration.py  ply_multiway_registration_2.py  run.sh  run_deeplab.sh  scan3d.cpp  transform_cad.py  utils.hpp  utilsPython.py  utils_cam.hpp  utils_detector_yolo.hpp
resources/input/: 3Points.txt  Ace.txt  Ae_2.txt  Are.txt
resources/output/: fori_w.txt  fori_w_2.txt  fori_w_old_copia.txt  pprec_real.txt  vasca.pcd  vasca_1.txt  vasca_2.pcd  vasca_2.txt
utils/: detection_rs.hpp  pc-icosaf.hpp  peg_in_hole.cpp  peginhole_k_non_diag.cpp  pipeline.sh  posa_obj_approx.cpp  punti_scan.cpp  reconstruction.cpp  utils_pc.hpp
